--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcc 'DA'
 - !lcsh 'Poor -- England -- London'
 - !lcsh 'London (England) -- Description and travel'
+- GITenberg
 title: Ricordi di Londra
 url: http://www.gutenberg.org/ebooks/27640
